create smoothie request
