# server/common/database/postgres/smoothie-fruit.db.service.js
@@ -45,14 +45,29 @@ class SmoothieFruitDBService {
     }).catch(err => console.log(err));
   }
 
-  create(pool, fruitGout) {
+  create(pool, idSmoothie, fruits) {
     return new Promise(async (resolve, reject) => {
       // const client = await pool.connect();
-      await pool.query('INSERT INTO smoothie_fruit VALUES ($1, $2, $3)', [null, fruitGout.id_fruit, fruitGout.gout], async err => {
-        // // await client.release();
-        if (err) reject(err);
-        else resolve(true);
-      });
+      // await pool.query('INSERT INTO smoothie_fruit VALUES ($1, $2, $3)', [null, idSmoothie, idFruit], async err => {
+      //   // // await client.release();
+      //   if (err) reject(err);
+      //   else resolve(true);
+      // });
+
+      const idsFruit = fruits.map(fruit => fruit.id);
+      const idsSmoothie = fruits.map(() => idSmoothie);
+      // await pool.query('INSERT INTO smoothie_fruit (id_smoothie, id_fruit) VALUES $1', Inserts('${$1}, ${$2}', smoothieFruits), async err => {
+      //   if (err) reject(err);
+      //   else resolve(true);
+      // });
+      await pool.query('INSERT INTO smoothie_fruit (id_smoothie, id_fruit) SELECT id_smoothie, id_fruit FROM UNNEST ($1::text[], $2::text[]) AS t (id_smoothie, id_fruit)',
+        [
+          idsSmoothie,
+          idsFruit,
+        ], async err => {
+          if (err) reject(err);
+          else resolve(true);
+        });
     });
   }
 }
